전체 조회쿼리 구현중