@@ -13,6 +13,7 @@ import org.springframework.stereotype.Repository;
 import java.time.LocalDate;
 import java.time.format.DateTimeFormatter;
 import java.util.List;
+import java.util.Map;
 import java.util.stream.Collectors;
 
 @Slf4j
@@ -58,7 +59,7 @@ public class ProcessedPriceInfoRepositoryCustom {
                 .build()
         ).collect(Collectors.toList());
     }
-    public GetPriceDiffOut getPriceDiff(GetPriceDiffIn in){
+    public GetPriceDiffOut getTodayAndWeeklyMeanPrice(GetPriceDiffIn in){
         QProcessedPriceInfo processedPriceInfo = QProcessedPriceInfo.processedPriceInfo;
         QUserGroupCode userGroupCode = QUserGroupCode.userGroupCode;
         QUserCode userCode = QUserCode.userCode;
@@ -84,11 +85,54 @@ public class ProcessedPriceInfoRepositoryCustom {
                 )
                 .fetch();
         return GetPriceDiffOut.builder()
-                .basePrice(result.get(result.size()-1).get(processedPriceInfo.price.avg()).longValue())
-                .baseDate(result.get(result.size()-1).get(processedPriceInfo.baseDate))
-                .pastPrice(result.get(0).get(processedPriceInfo.price.avg()).longValue())
+                .basePrice(result.getLast().get(processedPriceInfo.price.avg()).longValue())
+                .baseDate(result.getLast().get(processedPriceInfo.baseDate))
+                .meanPrice(result.stream()
+                        .map(element->element.get(processedPriceInfo.price.avg()))
+                        .reduce((a, b) -> a+b).get().longValue()/result.size()
+                )
                 .pastDate(result.get(0).get(processedPriceInfo.baseDate))
                 .build();
     }
+    //Legacy용
+    public Map<Long,InnerProduct> getAllProduct(GetAllProductIn in){
+        JPAQueryFactory query = new JPAQueryFactory(entityManager);
+        QInnerProduct innerProduct = QInnerProduct.innerProduct;
+        List<InnerProduct> result = query.select(innerProduct)
+                .from(innerProduct)
+                .where(innerProduct.isAvailable.eq(true)).fetch();
+        return result.stream().collect(Collectors.toMap(InnerProduct::getId,element -> element));
+    }
 
+    public List<GetPriceDiffListOut> getPriceDiffList(GetPriceDiffListIn in){
+        QProcessedPriceInfo processedPriceInfo = QProcessedPriceInfo.processedPriceInfo;
+        QUserGroupCode userGroupCode = QUserGroupCode.userGroupCode;
+        QUserCode userCode = QUserCode.userCode;
+        QInnerProduct innerProduct = QInnerProduct.innerProduct;
+        JPAQueryFactory query = new JPAQueryFactory(entityManager);
+
+        List<Tuple> result = query.select(
+                        innerProduct
+                        ,processedPriceInfo.baseDate
+                        ,processedPriceInfo.price.avg()
+                )
+                .from(processedPriceInfo, userGroupCode, innerProduct, userCode)
+                .where(
+                        processedPriceInfo.baseDate.between(in.getStartDate(), in.getEndDate())
+                                .and(processedPriceInfo.baseRange.eq(BaseRange.DAY))
+                                .and(processedPriceInfo.regionInfo.id.eq(userCode.codeDetailName.castToNum(Long.class)))
+                                .and(userGroupCode.eq(in.getRegionGroup()))
+                                .and(userCode.userGroupCode.eq(in.getRegionGroup()))
+                                .and(processedPriceInfo.baseProduct.in(innerProduct.baseProducts))
+                ).groupBy(
+                        innerProduct,
+                        processedPriceInfo.baseDate
+                )
+                .fetch();
+        //log.info("실행결과 : {}",result);
+        return result.stream().map(element -> GetPriceDiffListOut.builder().innerProduct(element.get(innerProduct))
+                .price(element.get(processedPriceInfo.price.avg()))
+                .baseDate(element.get(processedPriceInfo.baseDate))
+                .build()).collect(Collectors.toList());
+    }
 }
